--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
-
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andromeda</title>
+    <title>Tabela com Imagens</title>
 </head>
 <body>
-    <center>
-        <h1>Leonardo Silva e Cruz</h1>
-        <br>
-        <h2>Lucas é </h2>
-        <h2>Mas depende</h2>
-        <br>
-        <h3> <a href="https://sp.senai.br/unidade/santoamaro/">Senai "Ary Torres"</a></h3>
-        <h3>olo</h3>
-        <br>
-    </center>
+
+<table border="1">
+    <tr>
+        <td><img src="imagem1.jpg" alt="Imagem 1" width="100" height="100"></td>
+        <td><img src="imagem2.jpg" alt="Imagem 2" width="100" height="100"></td>
+        <td><img src="imagem3.jpg" alt="Imagem 3" width="100" height="100"></td>
+    </tr>
+    <tr>
+        <td><img src="imagem4.jpg" alt="Imagem 4" width="100" height="100"></td>
+        <td><img src="imagem5.jpg" alt="Imagem 5" width="100" height="100"></td>
+        <td><img src="imagem6.jpg" alt="Imagem 6" width="100" height="100"></td>
+    </tr>
+</table>
+
 </body>
 </html>
