--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
 <table border="1">
     <tr>
-        <td><img src="imagem1.jpg" alt="Imagem 1" width="100" height="100"></td>
-        <td><img src="imagem2.jpg" alt="Imagem 2" width="100" height="100"></td>
-        <td><img src="imagem3.jpg" alt="Imagem 3" width="100" height="100"></td>
+        <td><img src="inception.png" alt="Imagem 1" width="100" height="100"></td>
+        <td><img src="lampiao.png" alt="Imagem 2" width="100" height="100"></td>
+        <td><img src="solucaut.png" alt="Imagem 3" width="100" height="100"></td>
     </tr>
     <tr>
-        <td><img src="imagem4.jpg" alt="Imagem 4" width="100" height="100"></td>
-        <td><img src="imagem5.jpg" alt="Imagem 5" width="100" height="100"></td>
-        <td><img src="imagem6.jpg" alt="Imagem 6" width="100" height="100"></td>
+        <a href="https://www.instagram.com/inception.3d/" target="_blank" rel="noopener noreferrer">Inception 3D</a>
+        <a href="https://www.instagram.com/coletivolampiao_/" target="_blank" rel="noopener noreferrer">Coletivo Lampiao da esquina</a>
+        <a href="https://www.instagram.com/solucaut/" target="_blank" rel="noopener noreferrer">Solucaut</a>
     </tr>
 </table>
 
