--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <title>Tabela com Imagens</title>
 </head>
 <body>
+<center>
 
 <table border="1">
     <tr>
-        <td><img src="inception.png" alt="Imagem 1" width="100" height="100"></td>
-        <td><img src="lampiao.png" alt="Imagem 2" width="100" height="100"></td>
-        <td><img src="solucaut.png" alt="Imagem 3" width="100" height="100"></td>
+        <td><img src="inception.png" alt="Imagem 1" width="382" height="308"></td>
+        <td><img src="lampiao.png" alt="Imagem 2" width="532" height="321"></td>
+        <td><img src="solucaut.png" alt="Imagem 3" width="409" height="396"></td>
     </tr>
     <tr>
-        <a href="https://www.instagram.com/inception.3d/" target="_blank" rel="noopener noreferrer">Inception 3D</a>
-        <a href="https://www.instagram.com/coletivolampiao_/" target="_blank" rel="noopener noreferrer">Coletivo Lampiao da esquina</a>
-        <a href="https://www.instagram.com/solucaut/" target="_blank" rel="noopener noreferrer">Solucaut</a>
+        <a href="https://www.instagram.com/inception.3d/" target="_blank" rel="noopener noreferrer"> Inception 3D </a>
+        <a href="https://www.instagram.com/coletivolampiao_/" target="_blank" rel="noopener noreferrer"> Coletivo Lampiao da esquina </a>
+        <a href="https://www.instagram.com/solucaut/" target="_blank" rel="noopener noreferrer"> Solucaut </a>
     </tr>
 </table>
-
+</center>
 </body>
 </html>
