--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <td><img src="solucaut.png" alt="Imagem 3" width="409" height="396"></td>
     </tr>
     <tr>
-        <a href="https://www.instagram.com/inception.3d/" target="_blank" rel="noopener noreferrer"> Inception 3D </a>
-        <a href="https://www.instagram.com/coletivolampiao_/" target="_blank" rel="noopener noreferrer"> Coletivo Lampiao da esquina </a>
-        <a href="https://www.instagram.com/solucaut/" target="_blank" rel="noopener noreferrer"> Solucaut </a>
+        <td><a href="https://www.instagram.com/inception.3d/" target="_blank" rel="noopener noreferrer"> Inception 3D </a></td>
+        <td><a href="https://www.instagram.com/coletivolampiao_/" target="_blank" rel="noopener noreferrer"> Coletivo Lampiao da esquina </a></td>
+        <td><a href="https://www.instagram.com/solucaut/" target="_blank" rel="noopener noreferrer"> Solucaut </a></td>
     </tr>
 </table>
 </center>
