--- a/index.html
+++ b/index.html
@@ -1,25 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabela com Imagens</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Exemplo de Parágrafos</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<center>
-
-<table border="1">
-    <tr>
-        <td><img src="inception.png" alt="Imagem 1" width="382" height="308"></td>
-        <td><img src="lampiao.png" alt="Imagem 2" width="532" height="321"></td>
-        <td><img src="solucaut.png" alt="Imagem 3" width="409" height="396"></td>
-    </tr>
-    <tr>
-        <td><a href="https://www.instagram.com/inception.3d/" target="_blank" rel="noopener noreferrer"> Inception 3D </a></td>
-        <td><a href="https://www.instagram.com/coletivolampiao_/" target="_blank" rel="noopener noreferrer"> Coletivo Lampiao da esquina </a></td>
-        <td><a href="https://www.instagram.com/solucaut/" target="_blank" rel="noopener noreferrer"> Solucaut </a></td>
-    </tr>
-</table>
-</center>
+  <h1>Bem-vindo ao Exemplo de Parágrafos</h1>
+  <p class="paragrafo-um">Este é o primeiro parágrafo. Ele contém um texto introdutório para demonstrar a formatação.</p>
+  <p>Qualidade de vida é o bem-estar geral de uma pessoa, englobando aspectos físicos, mentais, emocionais e sociais. Vai além da ausência de doenças, envolvendo também acesso à saúde, educação, lazer, segurança, moradia e um ambiente equilibrado. Ter qualidade de vida significa viver com dignidade, equilíbrio e satisfação, mantendo relações saudáveis e tempo para o autocuidado e a felicidade.</p>
 </body>
 </html>
