--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
   <h1>Bem-vindo ao Exemplo de Parágrafos</h1>
   <p class="paragrafo-um">Este é o primeiro parágrafo. Ele contém um texto introdutório para demonstrar a formatação.</p>
-  <p>Qualidade de vida é o bem-estar geral de uma pessoa, englobando aspectos físicos, mentais, emocionais e sociais. Vai além da ausência de doenças, envolvendo também acesso à saúde, educação, lazer, segurança, moradia e um ambiente equilibrado. Ter qualidade de vida significa viver com dignidade, equilíbrio e satisfação, mantendo relações saudáveis e tempo para o autocuidado e a felicidade.</p>
+  <p><strong>Qualidade de vida é o bem-estar geral de uma pessoa, englobando aspectos físicos, mentais, emocionais e sociais.
+    Vai além da ausência de doenças, envolvendo também acesso à saúde, educação, lazer, segurança, moradia e um ambiente equilibrado.
+    er qualidade de vida significa viver com dignidade, equilíbrio e satisfação, mantendo relações saudáveis e tempo para
+    o autocuidado e a felicidade.</strong></p>
 </body>
 </html>
