--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <p class="paragrafo-um">Este é o primeiro parágrafo. Ele contém um texto introdutório para demonstrar a formatação.</p>
   <p><strong> Qualidade de vida é o bem-estar geral de uma pessoa, englobando aspectos físicos, mentais, emocionais e sociais.
     Vai além da ausência de doenças, envolvendo também acesso à saúde, educação, lazer, segurança, moradia e um ambiente equilibrado.<br>
-    er qualidade de vida significa viver com dignidade, equilíbrio e satisfação, mantendo relações saudáveis e tempo para
+    Ter qualidade de vida significa viver com dignidade, equilíbrio e satisfação, mantendo relações saudáveis e tempo para
     o autocuidado e a felicidade.</strong></p>
 </body>
 </html>
