--- a/index.html
+++ b/index.html
@@ -9,9 +9,19 @@
 <body>
   <h1>Bem-vindo ao Exemplo de Parágrafos</h1>
   <!-- <p class="paragrafo-um">Este é o primeiro parágrafo. Ele contém um texto introdutório para demonstrar a formatação.</p> -->
-  <p><strong> <strong class="detalhe">Qualidade de vida</strong> é o bem-estar geral de uma pessoa, englobando aspectos físicos, mentais, emocionais e sociais.
-    Vai além da ausência de doenças, envolvendo também acesso à saúde, educação, lazer, segurança, moradia e um ambiente equilibrado.<br>
-    Ter qualidade de vida significa viver com dignidade, equilíbrio e satisfação, mantendo relações saudáveis e tempo para
-    o autocuidado e a felicidade.</strong></p>
+  <p><strong> <strong class="detalhe">Qualidade de vida</strong> > é um conceito amplo que envolve bem-estar físico, mental, emocional e social.  
+Vai além da ausência de doenças, abrangendo também a forma como as pessoas vivem, se sentem e se relacionam com o ambiente ao seu redor.  
+Ela está diretamente relacionada a fatores como acesso à saúde, educação de qualidade, segurança pública, moradia digna e oportunidades de lazer.  
+Uma boa qualidade de vida também depende da alimentação equilibrada, da prática regular de exercícios físicos e de uma boa rotina de sono.  
+A saúde mental é outro pilar essencial, e buscar apoio psicológico quando necessário é um sinal de autocuidado e responsabilidade.  
+Relações interpessoais saudáveis com familiares, amigos e colegas de trabalho contribuem para o equilíbrio emocional.  
+Ambientes acolhedores, tanto em casa quanto no trabalho, aumentam a motivação e reduzem o estresse.  
+A satisfação no trabalho e a estabilidade financeira permitem que o indivíduo tenha mais liberdade para fazer escolhas que o aproximem da felicidade.  
+O tempo destinado ao lazer, à cultura, à natureza e ao descanso ajuda a renovar as energias e proporciona mais prazer no cotidiano.  
+Além disso, o desenvolvimento pessoal e profissional, por meio de aprendizados contínuos, também tem um impacto positivo na autoestima e na realização pessoal.  
+Cidades com boa infraestrutura, transporte acessível e áreas verdes favorecem o bem-estar coletivo e promovem uma vida mais equilibrada.  
+Cada pessoa tem um entendimento único sobre o que é viver bem, pois a qualidade de vida está ligada aos valores, prioridades e contextos individuais.  
+Por isso, é importante que políticas públicas e ações sociais considerem a diversidade de realidades e ofereçam oportunidades para todos.  
+Qualidade de vida, portanto, é alcançar um estado de equilíbrio entre corpo, mente e ambiente, promovendo felicidade, segurança e realização pessoal.</strong></p>
 </body>
 </html>
